# lull

./: AI_RULES.md  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  COST.md  DEVLOG.md  HANDOFF.md  PRD.md  README.md  UX_FLOWS.md  index.html  package-lock.json  package.json  rest.html  vite.config.ts
src/: audio.ts  config.ts  dom.ts  icons.ts  main.ts  microbreak.test.ts  microbreak.ts  rest.ts  settings.ts  state.test.ts  state.ts  stats.test.ts  stats.ts  styles.css  timer.test.ts  timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
