[package]
name = "lull"
version = "0.1.0"
description = "Lull — a pitch-black Pomodoro timer that rests your eyes"
authors = ["Shawn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name on Windows. See https://github.com/rust-lang/cargo/issues/8519
name = "lull_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
